@startuml

hide methods
left to right direction
skinparam classAttributeIconSize 0



class Company {
-designation
}

class Containers {
-x
-y
-z
-containerNumber
-checkDigit
-isoCode
-width
-height
-length
-payLoad
-tare
-gross
}

class Ship {
-mmsiCode
-name
-imoCode
-numberEnergyGenerators
-generatorPower
-callSign
-vesselType
-length
-width
-capacity
-draft
}

class CargoManifest {
-containerNumber
}

Company "1"--"1..*" Ship: has >
Containers "1..*"--"1..*" CargoManifest: relate >

Ship "1"--"1..*" Containers : transport >

@enduml
